...
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:src="@drawable/ic_picture"
            android:contentDescription="@string/content_desc_message_icon" />

        <TextView
            android:id="@+id/senderLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/messageIcon"
            android:layout_alignParentLeft="true"
            android:text="Test Name"
            android:paddingTop="@dimen/message_vertical_padding"
...
