...
            android:id="@+id/passwordField"
            style="@style/AuthEditText"
            android:hint="@string/password_hint"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/emailField"
            style="@style/AuthEditText"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress" />
    </LinearLayout>

    <ImageView
...
