<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ribbit</string>
    <string name="menu_logout_label">Logout</string>
    <string name="title_section1">Inbox</string>
    <string name="title_section2">Friends</string>
    <string name="title_activity_login">Ribbit Login</string>
    <string name="hello_world">Hello world!</string>
    <string name="username_hint">Username (Case Sensitive)</string>
...
